@@ -1,3 +1,11 @@
 MAJOR CHANGES IN JEDIT 3.1 SINCE 3.0
 
-Not yet written.
+- Folding
+- Startup macro
+- File permissions on Unix
+- Sessions moved to BufferList plugin
+- Tabs in abbrevs
+- All fonts available
+- Improved shortcuts option pane
+- Mode catalog
+- Improved undo
